--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.0.0-beta",
     "bootstrap-vue": "^1.0.0-beta.5",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
