--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "bootstrap-vue": "^1.0.0-beta.5",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -30,6 +31,7 @@
     "compression-webpack-plugin": "^1.0.0",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
+    "core-js": "^2.5.1",
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
     "eslint": "^3.19.0",
@@ -40,16 +42,20 @@
     "eslint-plugin-html": "^3.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eventsource-polyfill": "^0.9.6",
+    "exports-loader": "^0.6.4",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "imports-loader": "^0.7.1",
     "node-sass": "^4.5.3",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
+    "phantomjs-prebuilt": "^2.1.15",
+    "prerender-spa-plugin": "^2.1.0",
     "rimraf": "^2.6.0",
     "sass-lint": "^1.10.2",
     "sass-loader": "^6.0.6",
