--- a/package.json
+++ b/package.json
@@ -1,83 +1,38 @@
 {
   "name": "ketogenicfamily",
   "version": "1.0.0",
-  "description": "A Vue.js project",
+  "description": "Nuxt.js project",
   "author": "Jon Preece <jonpreece@hotmail.co.uk>",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
-    "build": "node build/build.js",
-    "lint": "eslint --ext .js,.vue src"
+    "dev": "backpack dev",
+    "build": "nuxt build && backpack build",
+    "start": "cross-env NODE_ENV=production node build/main.js",
+    "precommit": "npm run lint",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "bootstrap": "^4.0.0-beta",
-    "vue": "^2.4.4",
-    "vue-router": "^2.3.1",
-    "vuex": "^2.4.0",
-    "whatwg-fetch": "^2.0.3"
+    "cross-env": "^5.0.1",
+    "express": "^4.15.3",
+    "nuxt": "^1.0.0-rc3",
+    "source-map-support": "^0.4.15"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.4",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "chalk": "^2.0.1",
-    "compression-webpack-plugin": "^1.0.0",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "core-js": "^2.5.1",
-    "css-loader": "^0.28.7",
-    "cssnano": "^3.10.0",
-    "eslint": "^4.7.0",
-    "eslint-config-airbnb-base": "^12.0.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^3.2.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eventsource-polyfill": "^0.9.6",
-    "exports-loader": "^0.6.4",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.1",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
-    "imports-loader": "^0.7.1",
+    "babel-eslint": "^7.2.3",
+    "backpack-core": "^0.4.1",
+    "eslint": "^4.3.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-html": "^3.1.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "node-sass": "^4.5.3",
-    "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "phantomjs-prebuilt": "^2.1.15",
-    "prerender-spa-plugin": "^2.1.0",
-    "rimraf": "^2.6.2",
     "sass-lint": "^1.11.1",
     "sass-loader": "^6.0.6",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "uglify-es": "^3.1.0",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^13.0.4",
-    "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.19.1",
-    "webpack-merge": "^4.1.0"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "vue-style-loader": "^3.0.3"
+  }
 }
