--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nuxt": "^1.0.0-rc11",
     "source-map-support": "^0.4.15",
     "vue-disqus": "^2.0.3",
-    "vue-lazyload": "^1.1.3"
+    "vue-lazyload": "^1.1.3",
+    "vue-star-rating": "^1.4.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.1",
