--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "backpack dev",
     "build": "nuxt build && backpack build",
-    "start": "cross-env NODE_ENV=production node build/main.js",
+    "start": "cross-env NODE_ENV=dev node build/main.js",
     "precommit": "npm run lint",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "deploy": "pm2 deploy ecosystem.config.js production"
@@ -18,7 +18,7 @@
     "cross-env": "^5.0.1",
     "express": "^4.16.1",
     "nuxt": "^1.0.0-rc11",
-    "source-map-support": "^0.4.15",
+    "source-map-support": "^0.5.0",
     "vue-disqus": "^2.0.3",
     "vue-lazyload": "^1.1.3",
     "vue-star-rating": "^1.4.0"
@@ -27,7 +27,7 @@
     "@nuxtjs/sitemap": "0.0.3",
     "babel-eslint": "^8.0.1",
     "babel-preset-stage-2": "^6.24.1",
-    "backpack-core": "^0.4.1",
+    "backpack-core": "^0.4.3",
     "eslint": "^4.8.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
@@ -38,7 +38,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "node-sass": "^4.5.3",
     "pm2": "^2.7.1",
-    "sass-lint": "^1.11.1",
+    "sass-lint": "^1.12.0",
     "sass-loader": "^6.0.6",
     "vue-style-loader": "^3.0.3"
   }
