--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "Jon Preece <jonpreece@hotmail.co.uk>",
   "private": true,
   "scripts": {
-    "dev": "backpack dev",
+    "start": "backpack dev",
     "build": "nuxt build && backpack build",
-    "start": "cross-env NODE_ENV=production node build/main.js",
+    "prod": "cross-env NODE_ENV=production node build/main.js",
     "precommit": "npm run lint",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "deploy": "pm2 deploy ecosystem.config.js production"
@@ -16,7 +16,9 @@
     "axios": "^0.16.2",
     "bootstrap": "^4.0.0-beta",
     "cross-env": "^5.0.1",
-    "express": "^4.16.1",
+    "express": "^4.16.2",
+    "markdown-parse": "^0.2.1",
+    "moment": "^2.19.1",
     "nuxt": "^1.0.0-rc11",
     "source-map-support": "^0.5.0",
     "vue-disqus": "^2.0.3",
@@ -34,7 +36,7 @@
     "eslint-plugin-html": "^3.1.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "node-sass": "^4.5.3",
     "pm2": "^2.7.1",
