--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "bootstrap": "^4.0.0-beta",
-    "cross-env": "^5.0.1",
+    "bootstrap": "^4.0.0-beta.2",
+    "cross-env": "^5.1.0",
     "express": "^4.16.2",
     "markdown-parse": "^0.2.1",
     "moment": "^2.19.1",
     "nuxt": "^1.0.0-rc11",
     "source-map-support": "^0.5.0",
     "vue-disqus": "^2.0.3",
-    "vue-lazyload": "^1.1.3",
+    "vue-lazyload": "^1.1.4",
     "vue-star-rating": "^1.4.0"
   },
   "devDependencies": {
@@ -30,17 +30,17 @@
     "babel-eslint": "^8.0.1",
     "babel-preset-stage-2": "^6.24.1",
     "backpack-core": "^0.4.3",
-    "eslint": "^4.8.0",
+    "eslint": "^4.9.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^3.1.1",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "node-sass": "^4.5.3",
-    "pm2": "^2.7.1",
-    "sass-lint": "^1.12.0",
+    "pm2": "^2.7.2",
+    "sass-lint": "^1.12.1",
     "sass-loader": "^6.0.6",
     "vue-style-loader": "^3.0.3"
   }
