Work around nutrition labels

--- a/server/api/recipes/easy-trifle.json
+++ b/server/api/recipes/easy-trifle.json
@@ -13,29 +13,31 @@
   "rating": 4,
   "servings": {
     "total": 4,
-    "units": "servings"
+    "units": "servings",
+    "showNutritionalLabel": false,
+    "adjustable": true
   },
   "ingredients": [{
-      "quantity": 0.25,
+      "quantity": 1,
       "units": "packet",
       "description": "sugar free jelly raspberry"
     },
     {
-      "quantity": 0.125,
+      "quantity": 0.5,
       "units": "pint",
       "description": "cold water"
     },
     {
-      "quantity": 0.125,
+      "quantity": 0.5,
       "units": "pint",
       "description": "boiling water"
     }, {
-      "quantity": 75,
+      "quantity": 300,
       "units": "ml",
       "description": "whipping cream"
     },
     {
-      "quantity": 0.5,
+      "quantity": 2,
       "units": "sheets",
       "description": "gelatine"
     }
