--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ketogenicfamily",
   "version": "1.0.0",
-  "description": "Nuxt.js project",
+  "description": "KetogenicFamily.com - Follow our progress towards a permanent ketogenic lifestyle",
   "author": "Jon Preece <jonpreece@hotmail.co.uk>",
   "private": true,
   "scripts": {
