--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "bootstrap": "^4.0.0-beta.2",
     "cross-env": "^5.1.1",
     "express": "^4.16.2",
-    "markdown-parse": "^0.2.1",
+    "front-matter": "^2.3.0",
+    "marked": "^0.3.6",
     "moment": "^2.19.1",
     "nuxt": "^1.0.0-rc11",
     "source-map-support": "^0.5.0",
