--- a/.babelrc
+++ b/.babelrc
@@ -7,9 +7,13 @@
       }
     }],
     "backpack-core/babel",
-    "stage-2"
+    "stage-2",
+    "vue-app"
   ],
-  "plugins": ["transform-runtime"],
+  "plugins": [
+    "transform-runtime",
+    "transform-vue-jsx"
+  ],
   "env": {
     "test": {
       "presets": ["env", "stage-2"],
