--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "deploy": "pm2 deploy ecosystem.config.js production"
   },
   "dependencies": {
-    "axios": "^0.17.1",
+    "axios": "^0.18.0",
     "bootstrap": "^4.0.0-beta.3",
     "classnames": "^2.2.5",
     "cross-env": "^5.1.3",
@@ -21,7 +21,7 @@
     "front-matter": "^2.3.0",
     "marked": "^0.3.9",
     "moment": "^2.20.1",
-    "nuxt": "^1.0.0-rc11",
+    "nuxt": "^1.3.0",
     "source-map-support": "^0.5.0",
     "vue-disqus": "^2.0.4",
     "vue-lazyload": "^1.1.4",
@@ -35,19 +35,19 @@
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-vue-app": "^2.0.0",
-    "backpack-core": "^0.4.3",
+    "backpack-core": "^0.5.0",
     "eslint": "^4.15.0",
-    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard": "^11.0.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^4.0.1",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-node": "^6.0.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "node-sass": "^4.7.2",
     "pm2": "^2.9.1",
     "sass-lint": "^1.12.1",
     "sass-loader": "^6.0.6",
-    "vue-style-loader": "^3.0.3"
+    "vue-style-loader": "^4.0.2"
   }
 }
