--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "moment": "^2.21.0",
     "nuxt": "^1.4.0",
     "source-map-support": "^0.5.0",
+    "vue": "^2.5.13",
     "vue-disqus": "^2.0.4",
     "vue-lazyload": "^1.1.4",
     "vue-star-rating": "^1.5.1"
   },
   "devDependencies": {
     "@nuxtjs/sitemap": "0.0.3",
+    "autoprefixer": "^8.1.0",
     "babel-eslint": "^8.1.2",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-plugin-syntax-jsx": "^6.18.0",
