--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "ketogenicfamily",
   "version": "1.0.0",
-  "description": "KetogenicFamily.com - Follow our progress towards a permanent ketogenic lifestyle",
+  "description":
+    "KetogenicFamily.com - Follow our progress towards a permanent ketogenic lifestyle",
   "author": "Jon Preece <jonpreece@hotmail.co.uk>",
   "private": true,
   "scripts": {
@@ -21,7 +22,7 @@
     "front-matter": "^2.3.0",
     "marked": "^0.3.17",
     "moment": "^2.21.0",
-    "nuxt": "^1.4.0",
+    "nuxt": "^1.0.0",
     "source-map-support": "^0.5.0",
     "vue": "^2.5.13",
     "vue-disqus": "^2.0.4",
@@ -53,6 +54,7 @@
     "pm2": "^2.9.1",
     "sass-lint": "^1.12.1",
     "sass-loader": "^6.0.7",
-    "vue-style-loader": "^4.0.2"
+    "vue-style-loader": "^4.0.2",
+    "webpack-hot-middleware": "^2.21.1"
   }
 }
