--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "ketogenicfamily",
   "version": "1.0.0",
-  "description":
-    "KetogenicFamily.com - Follow our progress towards a permanent ketogenic lifestyle",
+  "description": "KetogenicFamily.com - Follow our progress towards a permanent ketogenic lifestyle",
   "author": "Jon Preece <jonpreece@hotmail.co.uk>",
   "private": true,
   "scripts": {
@@ -15,14 +14,14 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^4.0.0-beta.3",
     "classnames": "^2.2.5",
     "cross-env": "^5.1.3",
     "express": "^4.16.2",
     "front-matter": "^2.3.0",
-    "marked": "^0.3.17",
-    "moment": "^2.21.0",
-    "nuxt": "^1.0.0",
+    "marked": "^0.3.9",
+    "moment": "^2.20.1",
+    "nuxt": "^1.3.0",
     "source-map-support": "^0.5.0",
     "vue": "^2.5.13",
     "vue-disqus": "^2.0.4",
@@ -41,20 +40,19 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-vue-app": "^2.0.0",
     "backpack-core": "^0.5.0",
-    "eslint": "^4.18.2",
+    "eslint": "^4.15.0",
     "eslint-config-standard": "^11.0.0",
-    "eslint-loader": "^2.0.0",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^4.0.1",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^6.0.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "mime": "^2.2.0",
     "node-sass": "^4.7.2",
     "pm2": "^2.9.1",
     "sass-lint": "^1.12.1",
-    "sass-loader": "^6.0.7",
-    "vue-style-loader": "^4.0.2",
-    "webpack-hot-middleware": "^2.21.1"
+    "sass-loader": "^6.0.6",
+    "vue-style-loader": "^4.0.2"
   }
 }
