--- a/package.json
+++ b/package.json
@@ -14,46 +14,48 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "bootstrap": "^4.0.0-beta.3",
-    "classnames": "^2.2.5",
-    "cross-env": "^5.1.3",
-    "express": "^4.16.2",
+    "bootstrap": "^4.1.3",
+    "classnames": "^2.2.6",
+    "cross-env": "^5.2.0",
+    "express": "^4.16.3",
     "front-matter": "^2.3.0",
-    "marked": "^0.3.9",
-    "moment": "^2.20.1",
-    "nuxt": "^1.3.0",
-    "source-map-support": "^0.5.0",
-    "vue": "^2.5.13",
-    "vue-disqus": "^2.0.4",
-    "vue-lazyload": "^1.1.4",
-    "vue-meta": "^1.4.3",
+    "marked": "^0.4.0",
+    "moment": "^2.22.2",
+    "nuxt": "^1.4.1",
+    "source-map-support": "^0.5.6",
+    "vue": "^2.5.16",
+    "vue-disqus": "^3.0.3",
+    "vue-lazyload": "^1.2.6",
+    "vue-meta": "^1.5.2",
     "vue-router": "^3.0.1",
-    "vue-star-rating": "^1.5.1"
+    "vue-server-renderer": "2.5.16",
+    "vue-star-rating": "^1.6.0",
+    "vue-template-compiler": "2.5.16"
   },
   "devDependencies": {
-    "@nuxtjs/sitemap": "0.0.3",
+    "@nuxtjs/sitemap": "0.1.1",
     "@nuxtjs/youch": "^4.2.3",
-    "autoprefixer": "^8.1.0",
-    "babel-eslint": "^8.1.2",
+    "autoprefixer": "^9.0.2",
+    "babel-eslint": "^8.2.6",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-vue-app": "^2.0.0",
-    "backpack-core": "^0.5.0",
-    "eslint": "^4.15.0",
+    "backpack-core": "^0.7.0",
+    "eslint": "^5.2.0",
     "eslint-config-standard": "^11.0.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^4.0.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^6.0.0",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "mime": "^2.2.0",
-    "node-sass": "^4.7.2",
-    "pm2": "^2.9.1",
+    "eslint-loader": "^2.1.0",
+    "eslint-plugin-html": "^4.0.5",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "mime": "^2.3.1",
+    "node-sass": "^4.9.2",
+    "pm2": "^3.0.3",
     "sass-lint": "^1.12.1",
-    "sass-loader": "^6.0.6",
-    "vue-style-loader": "^4.0.2"
+    "sass-loader": "^7.0.3",
+    "vue-style-loader": "^4.1.1"
   }
 }
