--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "vue-router": "^3.0.1",
     "vue-server-renderer": "2.5.16",
     "vue-star-rating": "^1.6.0",
-    "vue-template-compiler": "2.5.16"
+    "vue-template-compiler": "^2.5.16"
   },
   "devDependencies": {
     "@nuxtjs/sitemap": "0.1.1",
