--- a/package.json
+++ b/package.json
@@ -19,24 +19,24 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
     "front-matter": "^2.3.0",
-    "marked": "^0.4.0",
+    "marked": "^0.5.0",
     "moment": "^2.22.2",
     "nuxt": "^1.4.1",
     "source-map-support": "^0.5.6",
-    "vue": "^2.5.16",
+    "vue": "2.5.17",
     "vue-disqus": "^3.0.3",
     "vue-lazyload": "^1.2.6",
     "vue-meta": "^1.5.2",
     "vue-router": "^3.0.1",
-    "vue-server-renderer": "2.5.16",
+    "vue-server-renderer": "^2.5.17",
     "vue-star-rating": "^1.6.0",
-    "vue-template-compiler": "^2.5.16"
+    "vue-template-compiler": "2.5.17"
   },
   "devDependencies": {
     "@nuxtjs/sitemap": "0.1.1",
     "@nuxtjs/youch": "^4.2.3",
     "autoprefixer": "^9.0.2",
-    "babel-eslint": "^8.2.6",
+    "babel-eslint": "^9.0.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
@@ -44,13 +44,13 @@
     "babel-preset-vue-app": "^2.0.0",
     "backpack-core": "^0.7.0",
     "eslint": "^5.2.0",
-    "eslint-config-standard": "^11.0.0",
+    "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.0",
     "eslint-plugin-html": "^4.0.5",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "mime": "^2.3.1",
     "node-sass": "^4.9.2",
     "pm2": "^3.0.3",
